Fix: Home icon alignment with text in Docs Breadcrumbs

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1449,3 +1449,8 @@ a {
   }
 }
 
+/* ================= MISCELLANEOUS ================= */
+/* Fix Home icon alignment with text in breadcrumbs [Docs] */
+.theme-doc-breadcrumbs a.breadcrumbs__link > svg.breadcrumbHomeIcon_YNFT {
+  display: inline-block;
+}
